# price-volatility-trading-bot

./: .gitignore  Cargo.toml  README.md  config.toml  log4rs.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: Algorithm.md  CodeOrganization.md
src/: exchange.rs  main.rs
src/binance/: api.rs  exchange_info.rs  filters.rs  mod.rs  new.rs  object.rs  orderbook.rs  prices.rs  start.rs  state.rs  symbols.rs  symbols_monitor.rs  trading.rs
src/config/: settings.rs
src/core/: calc.rs  cli.rs  engine.rs  json.rs  mod.rs  post_window_monitor.rs  pre_window_monitor.rs  prices.rs  structs.rs  trading.rs  types.rs  window_monitor.rs
