[package]
name = "price-volatility-trading-bot"
version = "0.9.1"
edition = "2021"

[dependencies]
binance = "0.20.2"
log = "0.4.20"
toml = "0.8.8"
env_logger = "0.10.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.111"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"]}
chrono = "0.4.31"
tokio = { version = "1.35.1", features = ["full"]}
rand = "0.8.5"
hex = "0.4.3"
strum = "0.25"
strum_macros = "0.25.3"
log4rs = "1.2.0"
clap = { version = "4.4.17", features = ["derive"] }
